@@ -61,7 +61,9 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
-  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter.
+  HCAT-445 Clover builds broken on trunk (rohinip via avandana)
+
+  HCAT-477 Drop table API in webhcat client does not respect the "ifExists" parameter. (avandana)
 
   HCAT-471 Test HCat_ShowDes_1[1-3] fails (vikram.dixit via gates)
 
